Add an option to use the address sanitizer. Also mark some functions to be ignored by asan.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ option( USE_SDL2 "Enable SDL 2.0 support (incompatible with SDL 1.2)" 1 )
 option( USE_WEXTRA "Enable extra compilation warnings" 0 )
 option( USE_PEDANTIC "Tell the compiler to be pedantic" 0 )
 option( USE_DEBUG_OPTIMIZE "Try to optimize the debug build" 1 )
+option( USE_ADDRESS_SANITIZER "Try to use the address sanitizer" 0 )
 
 set( NACL_SDK_PATH "" CACHE PATH "Path to native client SDK" )
 if( BUILD_GAME_NACL AND NOT NACL_SDK_PATH )
@@ -217,7 +218,9 @@ else()
   try_linker_flag( LINKER_O1 "-Wl,-O1" )
   try_linker_flag( LINKER_SORT_COMMON "-Wl,--sort-common" )
   try_linker_flag( LINKER_AS_NEEDED "-Wl,--as-needed" )
-  try_linker_flag( LINKER_NO_UNDEFINED "-Wl,--no-undefined" )
+  if( NOT USE_ADDRESS_SANITIZER )
+    try_linker_flag( LINKER_NO_UNDEFINED "-Wl,--no-undefined" )
+  endif()
   try_linker_flag( LINKER_Z_RELRO "-Wl,-z,relro" )
   try_linker_flag( LINKER_Z_NOW "-Wl,-z,now" )
   if( WIN32 )
@@ -245,6 +248,10 @@ else()
 
   if( USE_PEDANTIC )
     set_c_cxx_flag("-pedantic")
+  endif()
+
+  if( USE_ADDRESS_SANITIZER )
+    set_cxx_flag( "-fsanitize=address" )
   endif()
 
 endif()
