Fix clang warning about -mfpmath=sse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,7 +158,7 @@ else()
 
     # Clang prints a warning when if it doesn't support -mfpmath=sse
     set( CMAKE_REQUIRED_FLAGS "-Werror" )
-    set_c_cxx_flag( "-mfpmath=sse" )
+    try_c_cxx_flag( "-mfpmath=sse" )
     set( CMAKE_REQUIRED_FLAGS "" )
   elseif( ARCH STREQUAL "x86_64" )
     set_c_cxx_flag( "-m64" )
