Allow non-advanced granger to build all unlocked structures.

--- a/main/configs/buildables/hive.attr.cfg
+++ b/main/configs/buildables/hive.attr.cfg
@@ -8,7 +8,7 @@ icon              "icons/iconb_hive"
 unlockThreshold   150
 buildPoints       12
 buildTime         20000
-buildWeapon       advAlien
+buildWeapon       alien
 
 // Placement limits
 minNormal         0.0
