--- a/main/configs/buildables/overmind.attr.cfg
+++ b/main/configs/buildables/overmind.attr.cfg
@@ -8,7 +8,7 @@ icon              "icons/iconb_overmind"
 unlockThreshold   0
 buildPoints       0
 buildTime         30000
-buildWeapon       allAlien
+buildWeapon       alien
 
 // Placement limits
 minNormal         0.95
