--- a/main/configs/buildables/booster.attr.cfg
+++ b/main/configs/buildables/booster.attr.cfg
@@ -8,7 +8,7 @@ icon              "icons/iconb_booster"
 unlockThreshold   100
 buildPoints       12
 buildTime         15000
-buildWeapon       advAlien
+buildWeapon       alien
 
 // Placement limits
 minNormal         0.707
