--- a/main/configs/buildables/eggpod.attr.cfg
+++ b/main/configs/buildables/eggpod.attr.cfg
@@ -8,7 +8,7 @@ icon              "icons/iconb_eggpod"
 unlockThreshold   0
 buildPoints       10
 buildTime         15000
-buildWeapon       allAlien
+buildWeapon       alien
 
 // Placement limits
 minNormal         0.5
