--- a/pkg/unvanquished_src.dpkdir/configs/buildables/acid_tube.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/acid_tube.attr.cfg
@@ -8,7 +8,7 @@ icon              "icons/iconb_acid_tube"
 unlockThreshold   0
 buildPoints       8
 buildTime         15000
-buildWeapon       allAlien
+buildWeapon       alien
 
 // Placement limits
 minNormal         0.0
