--- a/pkg/unvanquished_src.dpkdir/configs/buildables/barricade.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/barricade.attr.cfg
@@ -8,7 +8,7 @@ icon              "icons/iconb_barricade"
 unlockThreshold   0
 buildPoints       8
 buildTime         20000
-buildWeapon       allAlien
+buildWeapon       alien
 
 // Placement limits
 minNormal         0.707
