--- a/pkg/unvanquished_src.dpkdir/configs/buildables/leech.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/leech.attr.cfg
@@ -8,7 +8,7 @@ icon              "icons/iconb_leech"
 unlockThreshold   0
 buildPoints       4
 buildTime         10000
-buildWeapon       allAlien
+buildWeapon       alien
 
 // Placement limits
 minNormal         0
