--- a/pkg/unvanquished_src.dpkdir/configs/buildables/trapper.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/trapper.attr.cfg
@@ -8,7 +8,7 @@ icon              "icons/iconb_trapper"
 unlockThreshold   100
 buildPoints       8
 buildTime         12000
-buildWeapon       advAlien
+buildWeapon       alien
 
 // Placement limits
 minNormal         0.0
