Fix a link error when compiling the client without the renderers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1207,7 +1207,7 @@ if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
 endif()
 
 # GLEW
-if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
+if( BUILD_CLIENT OR BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
   find_package( GLEW REQUIRED )
   include_directories( ${GLEW_INCLUDE_DIR} )
   set( LIBS_RENDERER ${LIBS_RENDERER} ${GLEW_LIBRARIES} )
@@ -1215,7 +1215,7 @@ if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
 endif()
 
 # OpenGL
-if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
+if( BUILD_CLIENT OR BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
   find_package( OpenGL REQUIRED )
   include_directories( ${OPENGL_INCLUDE_DIR} )
   set( LIBS_RENDERER ${LIBS_RENDERER} ${OPENGL_LIBRARIES} )
