--- a/main/configs/buildables/medistat.model.cfg
+++ b/main/configs/buildables/medistat.model.cfg
@@ -2,7 +2,7 @@ model       0 models/buildables/medistat/medistat.md3
 modelScale  5.75
 mins        -35 -35 -7
 maxs        35 35 2
-zOffset     -3.716796875 // -3.75+1/32+1/512 // -3.675 [5.25]
+zOffset     -7.1
 
 oldScale    1.0
 oldOffset   0
