Enable USE_VOIP and remove unnecessary build dependency on xvidcore.

--- a/debian/rules
+++ b/debian/rules
@@ -24,12 +24,12 @@ override_dh_auto_configure:
 	cmake .. -DCMAKE_INSTALL_PREFIX=/usr \
 		 -DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		 -DCMAKE_SKIP_RPATH=ON \
+		 -DUSE_VOIP=ON \
 		 -DGAME_QVM=OFF \
 		 -DUSE_OPENAL_DLOPEN=OFF \
 		 -DUSE_SDL2=${SDL2} \
 		 -DBUILD_TTY_CLIENT=OFF \
 		 $(shell test ! -f /usr/include/opus/opus.h || echo -DUSE_INTERNAL_OPUS=OFF) \
-		 $(shell test -f /usr/include/xvid.h || echo -DUSE_CIN_XVID=OFF) \
 		 $(shell test -d /usr/include/webp || echo -DUSE_WEBP=OFF)
 
 override_dh_auto_install:
