Change the compiledef GAME and CGAME to IN_GAME_VM and IN_CGAME_VM (UI will be removed soon)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1461,7 +1461,7 @@ if( BUILD_GAME_QVM )
 endif()
 
 GAMEMODULE( NAME game
-  COMPILE_DEF GAME
+  COMPILE_DEF IN_GAME_VM
   HAS_NACL 1
   HAS_QVM 0
   FILES ${GAMELIST}
@@ -1472,7 +1472,7 @@ GAMEMODULE( NAME game
 )
 
 GAMEMODULE( NAME cgame
-  COMPILE_DEF CGAME
+  COMPILE_DEF IN_CGAME_VM
   HAS_NACL 0
   HAS_QVM 1
   FILES ${CGAMELIST}
