Change the compiledef GAME and CGAME to IN_GAME_VM and IN_CGAME_VM (UI will be removed soon)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1474,7 +1474,7 @@ if( BUILD_GAME_QVM )
 endif()
 
 GAMEMODULE( NAME game
-  COMPILE_DEF GAME
+  COMPILE_DEF IN_GAME_VM
   HAS_NACL 1
   FILES ${GAMELIST}
   NACL_FILES ${GAMENACLLIST}
@@ -1484,7 +1484,7 @@ GAMEMODULE( NAME game
 )
 
 GAMEMODULE( NAME cgame
-  COMPILE_DEF CGAME
+  COMPILE_DEF IN_CGAME_VM
   HAS_NACL 0
   FILES ${CGAMELIST}
   NACL_FILES ${CGAMENACLLIST}
