Fix dir cleanup (broke the debian/rules ‘clean’ target).
This fixes commit fc3af440da27e3aa185b7c30863165208a0189ac.

--- a/debian/rules
+++ b/debian/rules
@@ -43,7 +43,7 @@ override_dh_strip:
 
 override_dh_auto_clean:
 	dh_auto_clean
-	rm -rf CMakeFiles lcc/CMakeFiles src/tests/CMakeFiles
+	rm -rf CMakeFiles lcc vm src/tests/CMakeFiles
 
 override_dh_builddeb:
 	dh_builddeb -- -Zxz
