--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1240,7 +1240,7 @@ function( GAMEMODULE )
     add_executable( ${GAMEMODULE_NAME}-nacl-native ${GAMEMODULE_FILES} ${SHAREDLIST} ${GAMEMODULE_NACL_FILES} ${NACLLIST_NATIVE} )
     target_link_libraries( ${GAMEMODULE_NAME}-nacl-native ${LIBS_BASE} )
     set_target_properties( ${GAMEMODULE_NAME}-nacl-native PROPERTIES
-      OUTPUT_NAME ${GAMEMODULE_NAME}
+      OUTPUT_NAME ${GAMEMODULE_NAME}-nacl-native
       COMPILE_DEFINITIONS ${GAMEMODULE_COMPILE_DEF}
     )
   endif()
