Use curses on windows TTY client and server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -568,7 +568,7 @@ else()
   )
 endif()
 
-if( LINUX )
+if( LINUX OR ( WIN32 AND (BUILD_SERVER OR BUILD_TTY_CLIENT) ) )
   set( ENGINELIST ${ENGINELIST}
     ${ENGINE_DIR}/sys/con_curses.cpp
   )
@@ -1209,10 +1209,11 @@ if( BUILD_CLIENT OR BUILD_TTY_CLIENT )
 endif()
 
 # Curses, pdcurses on Windows and ncursesw on Unix
-# For now curses is disabled on windows (introduced 30ms blocks even in non blocking mode)
-# and it isn't supported on mac
-if( WIN32 AND FALSE )
-  add_definitions( -DPDC_WIDE -DPDC_FORCE_UTF8 )
+# For now curses is disabled on windows client (introduced 30ms blocks even in non blocking mode)
+# It is however the only way to show console output so we include it
+# it isn't supported on mac
+if( WIN32 AND (BUILD_SERVER OR BUILD_TTY_CLIENT) )
+  add_definitions( -DPDC_WIDE -DPDC_FORCE_UTF8 -DUSE_CURSES)
   include_directories( ${LIB_DIR}/pdcurses )
   set( LIBSRC_ENGINE ${LIBSRC_ENGINE} ${PDCURSESLIST} )
   set( LIBS_ENGINE ${LIBS_ENGINE} gdi32 comdlg32 )
